# web-search

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.long-task-harness/: features.json  init.sh  long-task-progress.md  spec-gaps.json
docs/: claude-code.md  research.md  spec.md  test-plan.md
references/: providers.md  troubleshooting.md
src/wstk/: __main__.py  cache.py  cli.py  cli_support.py  errors.py  models.py  output.py  robots.py  safety.py  timeutil.py  urlutil.py
src/wstk/commands/: eval_cmd.py  extract_cmd.py  fetch_cmd.py  pipeline_cmd.py  providers_cmd.py  render_cmd.py  search_cmd.py  support.py
src/wstk/eval/: runner.py  scoring.py  suite.py
src/wstk/extract/: docs_extractor.py  readability_extractor.py  utils.py
src/wstk/fetch/: http.py
src/wstk/render/: browser.py
src/wstk/search/: base.py  brave_api_provider.py  ddgs_provider.py  registry.py  types.py
suites/: search-basic.jsonl
tests/: test_cache.py  test_cli_contract.py  test_cli_eval_contract.py  test_cli_pipeline_contract.py  test_cli_render_contract.py  test_eval_scoring.py  test_eval_suite.py  test_extract_docs.py  test_fetch_http.py  test_search_brave_api.py  test_timeutil.py  test_urlutil.py
tests/data/e2e/: README.md  commands.sh  extract-hf-fleurs.json  extract-kaggle-browsecomp.json  extract-kaggle-datasets.json  extract-python-dataclasses.docs.json  extract-sqlite-whynot.readability.json  extract-wikipedia-http-status.readability.json  fetch-airtravel-csv.json  fetch-hf-gaia.json  (+8 more)
(+23 files in other folders)
